--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,16 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+# Dependencies
+/node_modules
+
+# Build folder
+/dist
+
+# Environment variables
+.env
+.env.local
+
+# IDE and OS files
+.vscode
+.DS_Store
